--- a/src/components/ListPage/ListPage.module.css
+++ b/src/components/ListPage/ListPage.module.css
@@ -8,9 +8,10 @@
     align-items: center;
 }
 .innerBox {
+    margin-top: 100px;
     min-width: 480px;
+    width: 80%;
     height: fit-content;
-    width: fit-content;
     background-color: #fff;
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
     padding: 30px;
@@ -18,4 +19,45 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+}
+
+
+.tbl {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+.tbl td, .tbl th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+.tbl tr:nth-child(even){background-color: #f2f2f2;}
+
+.tbl tr:hover {background-color: #ddd;}
+
+.tbl th {
+    border: 1px solid #41474e;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #343a40;
+    color: rgb(218, 218, 218);
+}
+
+.backbtn {
+    position: absolute;
+    top: 100px;
+    left: 50px;
+    color: white;
+}
+
+.backbtn  a {
+    color: white;
+}
+
+.backbtn  a:hover {
+    color: rgb(210, 182, 182);
 }
