--- a/src/components/Upload/Upload.module.css
+++ b/src/components/Upload/Upload.module.css
@@ -19,3 +19,37 @@
     flex-direction: column;
     gap: 30px;
 }
+
+.backbtn {
+    position: absolute;
+    top: 100px;
+    left: 50px;
+    color: white;
+}
+
+.backbtn  a {
+    color: white;
+}
+
+.backbtn  a:hover {
+    color: rgb(210, 182, 182);
+}
+
+.filecontainer {
+    text-align: center;
+}
+
+button {
+    font-size: 1.2em;
+    padding: 5px 15px;
+    border-radius: 5px;
+    border: none;
+    background-color: rgb(218, 218, 218);
+    color: #343a40;
+    
+}
+
+button:hover {
+    background-color: #343a40;
+    color: rgb(218, 218, 218);
+}
