--- a/src/components/Profile/profile.css
+++ b/src/components/Profile/profile.css
@@ -1,11 +1,14 @@
 .profile{
+    background: white;
+    width: 30%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-self: center;
     text-align: center;
-    width:90%;
     margin-top:15px;
-    padding: 10px;
+    padding: 30px 10px;
+    border-radius: 10px;
     
 }
 .left{
