--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,11 @@ body {
   min-height: 100vh; 
   padding: 0;
 }
+.light{
+  background-color:white ;
+  color:black;
+}
+.dark{
+  background-color: black;
+  color:white;
+}
